matching the postgresql.conf from production

--- a/docker/default.env
+++ b/docker/default.env
@@ -16,6 +16,7 @@ NGINX_CONFIG_FILE=./nginx/nginx.conf
 NGINX_SERVER_CER_FILE=./nginx/cert.pem
 NGINX_SERVER_KEY_FILE=./nginx/key.pem
 NGINX_WELL_KNOWN_DIR=./data/well-known
+PG_CONF_FILE=./postgres/postgresql.conf
 PG_DATA_DIR=./data/labkey152
 PG_NAME=labkey
 PG_PASS=
