updated the baseUrl in the .ini

--- a/docker/ehrcron/scripts/pg_backup/lkbackup.ini
+++ b/docker/ehrcron/scripts/pg_backup/lkbackup.ini
@@ -10,7 +10,7 @@ tar_excluded_dirs = /var/run /var/tmp /var/spool /var/lib/ntp /usr/local/tomcat/
 rsync_backup_dir = /activepool/labkey/files
 
 [lk_config]
-baseURL= https://labkey/
+baseURL= http://labkey:8080/
 containerPath = shared
 
 [file_rotation]
