added the base url to the .env file

--- a/docker/default.env
+++ b/docker/default.env
@@ -5,6 +5,7 @@ LABKEY_MODULE_DEPLOY_DIR=../build/modules
 LABKEY_SESSION_DIR=./data/sessions
 LK_BACKGROUND_USER=admin.andy@example.com
 LK_BACKGROUND_USER_PASSWORD=password
+LK_BASE_URL=http://labkey:8080/
 MAIL_SERVER=smtp:[mailcatcher]:1025
 MONIT_CONFIG_FILE=./monit/monitrc
 MONIT_HOST_BACKUP_DIR=./data/labkey152
