--- a/docker/postgres/postgresql.conf
+++ b/docker/postgres/postgresql.conf
@@ -110,7 +110,7 @@ max_connections = 100			# (change requires restart)
 
 # - Memory -
 
-shared_buffers = 3072MB			# min 128kB
+shared_buffers = 4096MB			# min 128kB
 					# (change requires restart)
 #temp_buffers = 8MB			# min 800kB
 #max_prepared_transactions = 0		# zero disables the feature
@@ -305,7 +305,7 @@ logging_collector = on		# Enable capturing of stderr and csvlog
 # These are only used if logging_collector is on:
 log_directory = 'pg_log'		# directory where log files are written,
 					# can be absolute or relative to PGDATA
-log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'	# log file name pattern,
+log_filename = 'postgresql-%Y-%m-%d.log'	# log file name pattern,
 					# can include strftime() escapes
 #log_file_mode = 0600			# creation mode for log files,
 					# begin with 0 to use octal notation
@@ -371,7 +371,7 @@ log_rotation_age = 1d			# Automatic rotation of logfiles will
 					#   fatal
 					#   panic (effectively off)
 
-#log_min_duration_statement = -1	# -1 is disabled, 0 logs all statements
+log_min_duration_statement = 0	# -1 is disabled, 0 logs all statements
 					# and their durations, > 0 logs only
 					# statements running at least this number
 					# of milliseconds
@@ -387,9 +387,9 @@ log_checkpoints = on
 log_connections = on
 log_disconnections = on
 #log_duration = off
-#log_error_verbosity = default		# terse, default, or verbose messages
+log_error_verbosity = default		# terse, default, or verbose messages
 #log_hostname = off
-log_line_prefix = ' %t %p %u %d %h '			# special values:
+log_line_prefix = '%t [%p]:[%l-1] u=%u db=%d h=%h'			# special values:
 					#   %a = application name
 					#   %u = user name
 					#   %d = database name
@@ -411,7 +411,7 @@ log_line_prefix = ' %t %p %u %d %h '			# special values:
 					# e.g. '<%u%%%d> '
 log_lock_waits = on			# log lock waits >= deadlock_timeout
 #log_statement = 'none'			# none, ddl, mod, all
-#log_temp_files = -1			# log temporary files equal or larger
+log_temp_files = 0			# log temporary files equal or larger
 					# than the specified size in kilobytes;
 					# -1 disables, 0 logs all temp files
 log_timezone = 'America/Chicago'
