--- a/docker/postgres/postgresql.conf
+++ b/docker/postgres/postgresql.conf
@@ -389,7 +389,7 @@ log_disconnections = on
 #log_duration = off
 log_error_verbosity = default		# terse, default, or verbose messages
 #log_hostname = off
-log_line_prefix = '%t [%p]:[%c]:[%l] h=%h '			# special values:
+log_line_prefix = '%m [%p]:[%c]:[%l] h=%h '			# special values:
 					#   %a = application name
 					#   %u = user name
 					#   %d = database name
