added pgbadger to the docker-compose and the gradle build script

--- a/docker/default.env
+++ b/docker/default.env
@@ -22,4 +22,5 @@ PG_DATA_DIR=./data/labkey152
 PG_LOG_DIR=./logs/postgres
 PG_NAME=labkey
 PG_PASS=
+PG_REPORTS_DIR=./data/pg_reports
 PG_USER=postgres
