--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -72,3 +72,20 @@ server {
         proxy_pass http://mailcatcher:1080;
     }
 }
+
+server {
+    listen 1180 ssl;
+
+    server_name _;
+
+    ssl_certificate /usr/local/ssl/cert.pem;
+    ssl_certificate_key /usr/local/ssl/key.pem;
+
+    error_page 497 https://$host:$server_port$request_uri;
+
+    root /var/www/pg_reports;
+
+    location / {
+      index index.html index.htm
+    }
+}
