fixed the log prefix and the nginx conf to let us view the pgbadger on port 1180

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -83,9 +83,9 @@ server {
 
     error_page 497 https://$host:$server_port$request_uri;
 
-    root /var/www/pg_reports;
-
     location / {
-      index index.html index.htm
+      allow all;
+      root /var/www/pg_reports;
+      index index.html index.htm;
     }
 }
