35379: Setup trunk to build WNPRC modules from GitHub

--- a/gradle/settings/wnprc.gradle
+++ b/gradle/settings/wnprc.gradle
@@ -29,12 +29,12 @@ file("../../").listFiles().findAll { d ->
 }
 
 // include the main distributions (necessary for TeamCity)
-include ":server:distributions:test"
-include ":server:distributions:base"
-include ":server:distributions:community"
-include ":server:distributions:pro"
-include ":server:distributions:pro_plus"
+include ":distributions:test"
+include ":distributions:base"
+include ":distributions:community"
+include ":distributions:pro"
+include ":distributions:pro_plus"
 
 // include our WNPRC-specific community distribution
-include ":externalModules:wnprc-modules:distributions:wisc"
-include ":externalModules:wnprc-modules:distributions:wisc_community"
+include ":distributions:wisc"
+include ":distributions:wisc_community"
