--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -15,12 +15,12 @@ configurations {
     compile.extendsFrom(external)
 }
 
-tasks.compileApiJava {
-    options.compilerArgs << '-Werror'
-}
-tasks.compileJava {
-    options.compilerArgs << "-Werror"
-}
+//tasks.compileApiJava {
+//    options.compilerArgs << '-Werror'
+//}
+//tasks.compileJava {
+//    options.compilerArgs << "-Werror"
+//}
 
 dependencies {
     apiCompile 'org.jetbrains:annotations:15.0'
