--- a/Gringotts/build.gradle
+++ b/Gringotts/build.gradle
@@ -1,3 +1,5 @@
+import org.labkey.gradle.util.BuildUtils
+
 dependencies {
     apiExternal "xerces:xercesImpl:${xercesImplVersion}"
     apiExternal "org.apache.commons:commons-collections4:${commonsCollections4Version}"
@@ -7,4 +9,6 @@ dependencies {
     external "org.jooq:jooq:3.8.4"
     external "org.apache.commons:commons-collections4:${commonsCollections4Version}"
     external "joda-time:joda-time:2.9.3"
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "apiCompile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
 }
