--- a/Gringotts/module.properties
+++ b/Gringotts/module.properties
@@ -1,5 +1,6 @@
 Label: WNPRC Gringotts Data Store
 License: Apache 2.0
+ModuleDependencies: LDK
 LicenseURL: http://www.apache.org/licenses/LICENSE-2.0
 ModuleClass: org.labkey.gringotts.GringottsModule
 Name: Gringotts
