Update module references for git migration

--- a/ApiKey/build.gradle
+++ b/ApiKey/build.gradle
@@ -1,7 +1,7 @@
 import org.labkey.gradle.util.BuildUtils
 
 dependencies {
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
 
     apiExternal "org.apache.commons:commons-collections4:${commonsCollections4Version}"
     compile "javax.servlet:jsp-api:2.0"
