--- a/WNPRC_Compliance/build.gradle
+++ b/WNPRC_Compliance/build.gradle
@@ -1,7 +1,7 @@
 import org.labkey.gradle.util.BuildUtils
 
 dependencies {
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
 
     compile project(path: "${project.parent.path}:DBUtils", configuration: "apiCompile")
     compile project("${project.parent.path}:DBUtils")
