--- a/DBUtils/build.gradle
+++ b/DBUtils/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.BuildUtils
 
 dependencies {
 
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
 
     apiCompile "com.google.guava:guava:17.0"
     compile project( BuildUtils.getPlatformModuleProjectPath(project.gradle, "query"))
