--- a/primateid/build.gradle
+++ b/primateid/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.BuildUtils
 
 dependencies {
     compile project(":server:modules:ehrModules:ehr")
-    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":externalModules:labModules:LDK", depProjectConfig: "apiCompile")
+    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:LabDevKitModules:LDK", depProjectConfig: "apiCompile")
     BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ehrModules:ehr", depProjectConfig: "apiCompile")
 
 }
