--- a/gradle/javascript.gradle
+++ b/gradle/javascript.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id "com.moowork.node" version "1.2.0"
-}
+apply plugin: 'com.github.node-gradle.node'
 
 if (file("${project.projectDir}/src/java").exists())
 {
